Fixed Login page alignment

--- a/src/sass/layout/_login-page.scss
+++ b/src/sass/layout/_login-page.scss
@@ -1,3 +1,4 @@
 .loginPage {
-  padding-top: 60px;
+  height: calc(100vh - 65px);
+  display: flex;
 }
